// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Domain /> <TestDomain /> should render correctly with ACTIVE status 1`] = `
[
  <div
    className="sc-bcXGCL eEZeZH toasts-container toasts-container--top"
  />,
  <form
    className="sc-bcXGCL glKMLp"
    id="custom-domain-form"
    onSubmit={[Function]}
  >
    <h4
      className="sc-bcXGCL kWoONa cap-heading"
    >
      domain.name
    </h4>
    <div
      className="sc-bcXGCL cfomeD"
    >
      <div
        className="sc-bcXGCL bYbgZJ"
      >
        <div
          className="sc-bcXGCL rwSzk"
        >
          <p
            className="sc-bcXGCL cYWldl cap-text"
          >
            capco.subdomain
          </p>
          <p
            className="sc-bcXGCL cvCRpc cap-text"
          >
            capco.subdomain.description
          </p>
        </div>
      </div>
      <div
        className="sc-bcXGCL bHHTMn cap-form-control"
      >
        <label
          className="sc-bcXGCL erDWnu cap-form-label"
          htmlFor="subDomain"
          style={
            {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          <span
            className="sc-bcXGCL dRxVYq cap-text"
            style={
              {
                "marginLeft": 0,
                "marginTop": 0,
              }
            }
          >
            sub-domain
          </span>
        </label>
        <input
          aria-required={true}
          className="sc-bcXGCL sc-dwnPIk cmIMrK euPyfY cap-input"
          disabled={true}
          id="subDomain"
          name="subDomain"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="admiun.project.create.title.placeholder"
          readOnly={false}
          required={true}
          type="text"
          value="capco.domain.com"
        />
      </div>
    </div>
    <div
      className="sc-bcXGCL kVLURz"
    >
      <div
        className="sc-bcXGCL bYbgZJ"
      >
        <div
          className="sc-bcXGCL rwSzk"
        >
          <p
            className="sc-bcXGCL cYWldl cap-text"
          >
            custom-domain
          </p>
          <p
            className="sc-bcXGCL cvCRpc cap-text"
          >
            custom-domain.description
          </p>
        </div>
      </div>
      <div
        className="sc-bcXGCL bYbgZJ"
      >
        <div
          className="sc-bcXGCL bHHTMn cap-form-control"
        >
          <label
            className="sc-bcXGCL erDWnu cap-form-label"
            htmlFor="customDomain"
            style={
              {
                "marginLeft": 0,
                "marginTop": 0,
              }
            }
          >
            <span
              className="sc-bcXGCL dRxVYq cap-text"
              style={
                {
                  "marginLeft": 0,
                  "marginTop": 0,
                }
              }
            >
              custom-domain-name
            </span>
          </label>
          <span
            className="sc-bcXGCL cqMoEC cap-form-guideline"
          >
            domain.must.point.to.cname
            <p
              className="sc-bcXGCL cvCRpc cap-text"
            >
              domain.save.help
            </p>
          </span>
          <div
            className="sc-bcXGCL kjyNhh cap-input-group"
          >
            <div
              className="sc-bcXGCL fuDnIt"
            >
              <div
                aria-label="Tag custom.domain.com"
                className="sc-bcXGCL dezjdY cap-tag"
                onBlur={[Function]}
                onFocus={[Function]}
                title="custom.domain.com"
              >
                <span
                  className="sc-bcXGCL gGmAkb cap-tag__label"
                >
                  custom.domain.com
                </span>
                <button
                  aria-label="Remove custom.domain.com"
                  className="sc-bcXGCL sc-gGvGpy ebuXuV cITHqt cap-button cap-tag__closeButton"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex={0}
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="sc-bcXGCL sc-oZHua iYMWVp fOGDXF cap-icon"
                    fill="none"
                    height="1em"
                    viewBox="0 0 12 12"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M1 11 11 1M1 1l10 10"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                      strokeWidth={0.8}
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-label="delete-custom-domain"
      aria-modal={true}
      data-dialog={true}
      hidden={true}
      id="id-g"
      onAnimationEnd={[Function]}
      onBlur={[Function]}
      onKeyDown={[Function]}
      onTransitionEnd={[Function]}
      role="dialog"
      style={
        {
          "display": "none",
        }
      }
      tabIndex={-1}
    />
  </form>,
]
`;

exports[`<Domain /> <TestDomain /> should render correctly with IDLE status 1`] = `
[
  <div
    className="sc-bcXGCL eEZeZH toasts-container toasts-container--top"
  />,
  <form
    className="sc-bcXGCL glKMLp"
    id="custom-domain-form"
    onSubmit={[Function]}
  >
    <h4
      className="sc-bcXGCL kWoONa cap-heading"
    >
      domain.name
    </h4>
    <div
      className="sc-bcXGCL cfomeD"
    >
      <div
        className="sc-bcXGCL bYbgZJ"
      >
        <div
          className="sc-bcXGCL rwSzk"
        >
          <p
            className="sc-bcXGCL cYWldl cap-text"
          >
            capco.subdomain
          </p>
          <p
            className="sc-bcXGCL cvCRpc cap-text"
          >
            capco.subdomain.description
          </p>
        </div>
      </div>
      <div
        className="sc-bcXGCL bHHTMn cap-form-control"
      >
        <label
          className="sc-bcXGCL erDWnu cap-form-label"
          htmlFor="subDomain"
          style={
            {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          <span
            className="sc-bcXGCL dRxVYq cap-text"
            style={
              {
                "marginLeft": 0,
                "marginTop": 0,
              }
            }
          >
            sub-domain
          </span>
        </label>
        <input
          aria-required={true}
          className="sc-bcXGCL sc-dwnPIk cmIMrK euPyfY cap-input"
          disabled={true}
          id="subDomain"
          name="subDomain"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="admiun.project.create.title.placeholder"
          readOnly={false}
          required={true}
          type="text"
          value="capco.domain.com"
        />
      </div>
    </div>
    <div
      className="sc-bcXGCL kVLURz"
    >
      <div
        className="sc-bcXGCL bYbgZJ"
      >
        <div
          className="sc-bcXGCL rwSzk"
        >
          <p
            className="sc-bcXGCL cYWldl cap-text"
          >
            custom-domain
          </p>
          <p
            className="sc-bcXGCL cvCRpc cap-text"
          >
            custom-domain.description
          </p>
        </div>
      </div>
      <div
        className="sc-bcXGCL bYbgZJ"
      >
        <div
          className="sc-bcXGCL bHHTMn cap-form-control"
        >
          <label
            className="sc-bcXGCL erDWnu cap-form-label"
            htmlFor="customDomain"
            style={
              {
                "marginLeft": 0,
                "marginTop": 0,
              }
            }
          >
            <span
              className="sc-bcXGCL dRxVYq cap-text"
              style={
                {
                  "marginLeft": 0,
                  "marginTop": 0,
                }
              }
            >
              custom-domain-name
            </span>
          </label>
          <span
            className="sc-bcXGCL cqMoEC cap-form-guideline"
          >
            domain.must.point.to.cname
            <p
              className="sc-bcXGCL cvCRpc cap-text"
            >
              domain.save.help
            </p>
          </span>
          <div
            className="sc-bcXGCL kjyNhh cap-input-group"
          >
            <input
              className="sc-bcXGCL sc-dwnPIk cmIMrK euPyfY cap-input"
              disabled={false}
              id="customDomain"
              name="customDomain"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="custom-domain-placeholder"
              readOnly={false}
              required={false}
              type="text"
            />
            <button
              className="sc-bcXGCL sc-gGvGpy kkwMkp jrAhSN cap-button"
              disabled={true}
              type="submit"
            >
              global.use
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-label="delete-custom-domain"
      aria-modal={true}
      data-dialog={true}
      hidden={true}
      id="id-g"
      onAnimationEnd={[Function]}
      onBlur={[Function]}
      onKeyDown={[Function]}
      onTransitionEnd={[Function]}
      role="dialog"
      style={
        {
          "display": "none",
        }
      }
      tabIndex={-1}
    />
  </form>,
]
`;
